--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,10 @@ tabulate
 # verified versions
 # pycocotools corresponds to https://github.com/ppwwyyxx/cocoapi
 pycocotools>=2.0.2
-onnx==1.8.1
-onnxruntime==1.8.0
-onnx-simplifier==0.3.5
+# onnx==1.8.1
+# onnxruntime==1.8.0
+# onnx-simplifier==0.3.5
+
+aiofiles==22.1.0
+fastapi[all]==0.87.0
+uvicorn[standard]==0.20.0
